ProcessingInstruction should not be a ContainerNode https://bugs.webkit.org/show_bug.cgi?id=75141

Reviewed by Darin Adler.

Source/WebCore:

Per the DOM spec, ProcessingInstruction can't have any children.
And the WebCore behavior already matches the spec by always returning
false for childTypeAllowed(). This change simplifies
ProcessingInstruction's implementation by making it subclass Node
instead of ContainerNode.

Test: fast/dom/processing-instruction-appendChild-exceptions.xhtml

* dom/ContainerNode.cpp: Moved dispatchBeforeLoadEvent up to Node.
* dom/ContainerNode.h:
* dom/Node.cpp:
(WebCore::Node::dispatchBeforeLoadEvent): Moved up from ContainerNode
since it's used both by ProcessingInstruction and various Element
subclasses.
* dom/Node.h:
* dom/ProcessingInstruction.cpp:
(WebCore::ProcessingInstruction::ProcessingInstruction): Call Node constructor.
(WebCore::ProcessingInstruction::insertedIntoDocument): Call Node impl.
(WebCore::ProcessingInstruction::removedFromDocument): ditto.
(WebCore::ProcessingInstruction::finishParsingChildren): ditto.
* dom/ProcessingInstruction.h:

LayoutTests:

* fast/dom/processing-instruction-appendChild-exceptions-expected.txt: Added.
* fast/dom/processing-instruction-appendChild-exceptions.xhtml: Added.


Canonical link: https://commits.webkit.org/94372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106418 268f45cc-cd09-0410-ab3c-d52691b4dbfc